[package]
authors = ["Keith Simmons <keith@the-simmons.net>"]
name = "vector-8"
version = "0.0.1"

[profile.dev]
lto = true
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.2.0"
console_error_panic_hook = "*"
lazy_static = "1.4.0"
serde = "^1.0.59"

[dependencies.lyon]
version = "0.14.1"
features = ["serialization"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console'
]
